--- a/public/style.css
+++ b/public/style.css
@@ -14,6 +14,9 @@ canvas {
   display: flex;
   flex-direction: column;
 }
+#game-window{
+  background: #101020;
+}
 
 @media (min-width: 800px) {
   .container {
