--- a/views/index.html
+++ b/views/index.html
@@ -26,6 +26,11 @@
         height="480"
       >
       </canvas>
+      <div class="sidebar">
+        <h1>score:<p id="score_display"></p></h1>
+        
+        <h1>rank:<span id="rank_display"></span></h1>
+      </div>
     </div>
   </body>
   <script src="../public/game.mjs" type="module"></script>
